force-app/main/default/objects/Account/fields/VATCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>VATCheckStatus__c</fullName>
    <label>VAT Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>