force-app/main/default/objects/Account/fields/VATStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>VATStatusMessage__c</fullName>
    <label>VAT Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>